# tdd-bitcoinconverter

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: dev.test.yml  prod.test.yml  test.yml
bitcoinconverter/: .coverage  .coveragerc  pyproject.toml
bitcoinconverter/src/: Convertor.py  InputHandler.py
bitcoinconverter/src/bitcoinconverter/: Convertor.py  InputHandler.py
bitcoinconverter/src/bitcoinconverter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bitcoinconverter/test/: test_Convertor.py  test_InputHandler.py
client/lib/: bitcoinconverter-1.0.0-py3-none-any.whl  bitcoinconvertor-1.0.0-py3-none-any.whl
client/src/: main.py
client/test/: test_main.py
src/bitcoinconvertor/: Convertor.py  InputHandler.py  main.py
src/main/: Convertor.py
src/test/: test_Convertor.py  test_InputHandler.py  test_main.py
