[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoinconverter"
version = "1.0.0"
description = "Bitcoin conversion utility"
authors = [{ name = "Simon" }]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = { find = { where = ["src"] } }
